migrate to ghcr.io registry

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,8 +24,8 @@ steps:
   - name: publish
     image: plugins/docker
     settings:
-      repo: docker.pkg.github.com/monkiato/guardian-admin/guardian-admin
-      registry: docker.pkg.github.com
+      repo: ghcr.io/monkiato/guardian-admin
+      registry: ghcr.io
       tags: ${DRONE_TAG}
       username:
         from_secret: docker_username
